feat: 优化trace
